<resources>
    <!-- Global -->
    <string name="app_name">Hotelbyte App</string>
    <string name="coin_name">Hotelcoin</string>
    <string name="coin_alias">HBF</string>

    <!-- Main -->
    <string name="exit_confirmation">Press Back One More Time To Exit</string>
    <string name="fab_gen_new">Create New Wallet</string>

    <string name="fab_send">Send</string>
    <string name="fab_welcome_title">Hello Hotelbyter!</string>
    <string name="fab_welcome_text">You need a main account to use the Hotelbyte App, for that create a new wallet or import an existent one</string>
    <string name="fab_welcome_end">Enjoy your hotel experience!</string>

    <!-- Wallet Home -->
    <string name="wallet_home_welcome_title">Create your first account</string>
    <string name="wallet_home_welcome_body">Tap the button to start creating or importing your first account</string>

    <!-- Wallet Gen -->
    <string name="wallet_generate_warn_title">Generate a new encrypted wallet</string>
    <string name="wallet_generate_warn_msg">Choose a strong password. This process will be performed in the background so you can still use your phone as you usually would in the meantime.
        The progress is displayed in the notification bar of your device and as soon as we have finished generating your wallet, we will let you know.</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Generate</string>

    <string name="error_invalid_password">This password is too short (Min: 9)</string>
    <string name="error_secure_password">Must contain a minimum of 1 lower case letter, 1 upper case letter and 1 numeric character</string>
    <string name="error_invalid_input">The input is null</string>
    <string name="error_invalid_amount">Invalid amount format</string>
    <string name="error_incorrect_password">Passwords do not match</string>
    <string name="error_not_enough_balance">Not enough balance.</string>
    <string name="error_not_enough_balance_max">Available balance are</string>

    <string name="dialog_write_down_pw_title">Important!</string>
    <string name="dialog_write_down_pw_text">Hotel Wallet will encrypt your Wallet with the password your provided to keep your HotelCoin\'s safe. Your password is literally the only way to unlock your wallet and spend your HotelCoin\'s, so make sure you don\'t forget it! We suggest to write it down on a piece of paper.</string>
    <string name="dialog_back_button">Cancel</string>

    <string name="wallet_one_at_a_time">Not So Fast</string>
    <string name="wallet_creation_one_at_a_time_text">We are currently generating a wallet for you, you can see the progress in your notification bar. Don\'t worry, we will notify you as soon as your wallet generation is finished :-) If you really wish to generate another one please wait for the current wallet to be completed first.</string>
    <string name="wallet_deletion_one_at_a_time_text">We are currently deleting a wallet for you. Don\'t worry, we will notify you as soon as your wallet deletion is finished :-)</string>
    <string name="button_ok">OK</string>

    <!-- Wallet gen notification -->

    <string name="notification_wallgen_title">Generating Wallet…</string>
    <string name="notification_wallgen_finished">Wallet Creation Finished!</string>
    <string name="wallet_gen_service_title">Generating New Wallet</string>
    <string name="notification_click_to_view">Click to view</string>
    <string name="notification_wallgen_maytake">This may take a couple minutes</string>

    <!-- Wallet Transfer -->
    <string name="to_address">To Address</string>
    <string name="from_address">From Address</string>
    <string name="action_transfer">Transfer</string>
    <string name="prompt_amount">Amount</string>

    <string name="password_in_clear_text">Show Password in clear text</string>
    <string name="notification_transferingticker">Transferring HotelCoin…</string>
    <string name="notification_transfering_title">Transferring HotelCoin</string>
    <string name="notification_might_take_a_minute">This might take a minute</string>

    <string name="notification_transfersuc">Transfer successful</string>
    <string name="notification_transferfail">Transfer Failed</string>

    <!-- Wallet Detail -->

    <string name="notification_transfer_received">Transaction received!</string>
    <string name="detail_transaction_count">Transactions: </string>
    <string name="detail_copy_clipboard_action">Text has been copied to clipboard.</string>

    <!-- Transaction Detail -->

    <string name="activity_send_title">Transaction Detail</string>
    <string name="timestamp">Timestamp</string>
    <string name="block_confirmations">Confirmations</string>
    <string name="block_height">Block</string>
    <string name="gas_used">Gas Used</string>
    <string name="gas_price">Gas Price</string>
    <string name="nonce">Nonce</string>
    <string name="tx_cost">TX Cost</string>
    <string name="open_in_browser">Open in Browser</string>

    <!-- Wallet popup menu -->
    <string name="wallet_popup_edit_name">Edit name</string>
    <string name="wallet_popup_backup">Backup</string>
    <string name="wallet_popup_delete">Delete</string>
    <string name="wallet_popup_delete_prompt">Type password for security</string>
    <string name="wallet_popup_delete_prompt_progress">Deletion in progress...</string>
    <string name="wallet_popup_delete_prompt_deleted">Wallet deleted!</string>

    <!-- Slide layout -->
    <string name="slide_header_default">HEADER</string>
    <string name="slide_body_default">Lorem ipsum folder beuh anajne sdel</string>
    <string name="btn_sign_in_google">Sign in with Google</string>
    <string name="btn_sign_in_phone">Sign in with phone</string>

    <string name="slide_header_one">NEW HOTELS EXPERIENCE</string>
    <string name="slide_body_one">Evolve your bored hotel bookings experience to hotel smart bookings.</string>
    <string name="slide_header_two">ENJOY AND WIN PRIZES</string>
    <string name="slide_body_two">Win hotel bookings, hotelcoins or accessories using the mobile app.</string>
    <string name="slide_header_three">THE WORLD\'S FIRST</string>
    <string name="slide_body_three">The world\'s first Blockchain project that have focus on the <b>hoteliers</b> and <b>guests</b>.</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Main menu -->
    <string name="menu_wallet_title">Wallet</string>
    <string name="menu_profile_title">Profile</string>
    <string name="menu_share_title">Share</string>
    <string name="menu_communications_title">Share your experience</string>
    <string name="menu_settings_title">Settings</string>

    <!-- Wallet main fragment -->
        <!-- Float menu -->
        <string name="fab_wallet_new_title">New wallet</string>
        <string name="fab_wallet_import_title">Import a wallet</string>
        <string name="fab_wallet_send_title">Send Hotelcoins</string>
        <!-- Main detail -->
        <string name="detail_wallet_blocks">Blocks Mined 0</string>
        <string name="detail_wallet_tx">Transactions 0</string>
        <string name="detail_wallet_type">Type Account</string>
        <string name="detail_wallet_date">First seen 2018&#8211;02&#8211;01</string>
        <string name="detail_wallet_amount">Amount</string>

    <!-- New wallet generation vertical stepper  -->
    <string name="title_step_0">Wallet name</string>
    <string name="title_step_1">Create a strong password</string>
    <string name="title_step_2"></string>
    <string name="content_step_2">This is the last step. You can finish steps now.</string>
    <string name="step_0_warn_00">Provide a wallet name please</string>
    <string name="step_0_warn_01">Minimum name length is 4 characters</string>
    <string name="step_1_warn_00">This password is too short (Min: 9)</string>
    <string name="step_1_warn_01">Passwords do not match</string>
    <string name="step_1_warn_02">Must contain a minimum of 1 lower case letter, 1 upper case letter and 1 numeric character</string>
    <string name="step_done">. Done.</string>
    <string name="step_0_summary">Choose a name for your wallet.</string>
    <string name="step_1_summary">Minimum password length is 9.</string>
    <string name="step_1_done">Strong password. Done.</string>
    <string name="toggle_animation_button">Toggle Animation</string>

</resources>
